# numsim-mpi

./: .gitignore  .project  .sconsign.dblite  CMakeLists.txt  README.md  SConscript  SConstruct  custom.py  default.geom  default.param
src/: communicator.cpp  communicator.hpp  compute.cpp  compute.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  iterator.cpp  iterator.hpp  main.cpp  parameter.cpp  parameter.hpp  parameter0.cpp  solver.cpp  solver.hpp  typedef.hpp  visu.cpp  visu.hpp  vtk.cpp  vtk.hpp
